Fix z-index. Make overlay interactive when progress is visible

--- a/src/app/[shortCode]/_components/overlay/Info.module.css
+++ b/src/app/[shortCode]/_components/overlay/Info.module.css
@@ -4,7 +4,6 @@
   left: 0;
   right: 0;
   padding: 8px 12px;
-  z-index: 500;
 }
 
 .footerContent {
